[gd_scene load_steps=7 format=3 uid="uid://rvy0wgm8lx07"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_2igpi"]
[ext_resource type="Texture2D" uid="uid://batnxospsdvyo" path="res://assets/GameBg.png" id="1_31nqx"]
[ext_resource type="PackedScene" uid="uid://b8p851ivk7cps" path="res://scenes/paddle.tscn" id="2_wb8or"]
[ext_resource type="PackedScene" uid="uid://duxqfvwhjjnhg" path="res://scenes/gem.tscn" id="3_ibh4l"]
[ext_resource type="AudioStream" uid="uid://c1oq2pge1nt3o" path="res://assets/bgm_action_5.mp3" id="5_sx0j3"]
[ext_resource type="AudioStream" uid="uid://5lfkeix07gpg" path="res://assets/spell1_0.wav" id="6_t3l7e"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2igpi")
gem_scene = ExtResource("3_ibh4l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(546, 316)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_31nqx")

[node name="Paddle" parent="." instance=ExtResource("2_wb8or")]
position = Vector2(541, 608)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 195.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0.57331, 0.885894, 0.94476, 1)
theme_override_colors/font_shadow_color = Color(0.686275, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 35
text = "Score: 00000"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sx0j3")
volume_db = -2.0
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t3l7e")

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
